  * new options page "Tools->Options->Text Editor->D->Intellisense" to select sources of code completion
  * experimental tooltips and code completion from semantic analysis of source code
  * project configuration: new debugger option to redirect stdout to the debugger output window
  * project configuration: new option to pause after running program without debugger
  * added option to "Tools->Options->Projects and Solutions->Visual D Settings" to stop a solution build
    if a project fails to build

2012-03-14 Version 0.3.31

  * added option to "Intellisense" page to configure trigger of code completion
  * delay code definition window update until caret at the same position for a second to avoid pauses while
    navigating through the source
  * added support for building with GDC
  * added platform support for "x64" (use with GDC only)
  * includes new version 0.23 of cv2pdb that now also converts DWARF to pdb
  * tweaked idl2d to convert files to build with dmd 2.058
  * new version of mago: 
    - fixed possible stall when starting debugging
    - support for associative arrays in expressions
    - fixed problem with loading debug info of large projects
  * property: fixed editing multiple configurations at once
  * added Compile command to syntax check the current source file
  * parser now supports new delegate syntax (x) => x
  * project config: shown command line now updated when pressing "Apply"
  * fix resource include with spaces
  * fix always rebuilding if a dependent library project target has spaces in the path name

unreleased Version 0.3.32

  * new version of ccv2pdb with better handling of unicode characters in path names
  * new version of mago with string literal support for associative array keys and easier stepping into main
  * some changes to reduce memory leaks due to false pointers
  * fixed parser to disambiguate MixinStatement and MixinExpression
